# AC-ModKit

./: .gitignore  CMakeLists.txt  README.md  gui_lib.cpp  gui_lib.h  main.cpp  texture_correct_lib.cpp  texture_correct_lib.h  ui.h
.github/workflows/: windows-build.yml
stubs/: DirectXTex.h  winerror.h  winnls.h  winnt.h
tests/: directxtex_load_harness.cpp  texture_correct_tests.cpp
